--- a/Vezba1/vezba2.html
+++ b/Vezba1/vezba2.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
+<div>
 <div class="container1">
    <ul>
        <li><b>CATEGORIES</b></li>
@@ -43,12 +44,13 @@
  </div>
  <div class="container5">
     <div>
-     <img src="vezbanjeslika.jpg" width="30px"/>
-     <p class="right3"><b>Tailblocks</b></p>
+     <img  src="vezbanjeslika.jpg" />
+     <p class="jedan"><b>Tailblocks</b></p>
     </div>
      <p>Air plant banjo lyft occupy retro<br />
     adaptogen indego.</p>
 
  </div>
+</div>
 </body>
 </html>
