--- a/vezba25/vezba25.html
+++ b/vezba25/vezba25.html
@@ -208,8 +208,53 @@
                     </div>
                     <div class="quotes">
                         <img src="goodman1.jpg"  class="goodman"alt="">
-                        <p>Saul Goodman</p>
+                        <h2 class="saul">Saul Goodman</h2>
+                        <p class="ceo">Ceo & Founder</p>
+                        <p class="ten">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia officiis recusandae ratione, aut aperiam quam. Neque ipsam quas, magni exercitationem, illo laboriosam ex ratione<br />
+                             obcaecati fuga assumenda voluptate possimus non!</p>
                     </div>
+                    <div class="price">
+                        <button class="pricing">PRICING</button>
+                        <h1 class="check">Check our <span class="pric">Pricing</span></h1>
+                        <p class="check">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est<br />
+                             adipisci expedita at voluptas atque vitae autem.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="card1 card">
+                            <p class="busines">Free</p>
+                            <p class="zer"><sup class="dol">$</sup>0<sub class="month">/month</sub></p>
+                            <p>Aida dere </p>
+                            <p>Nec feugiat nisl</p>
+                            <p>Nulla at volutpat dola</p>
+                            <p class="strike1">Pharetra massa</p>
+                            <p class="strike1">Massa ultricies mi</p>
+                            <button class="buy1">Buy Now</button>
+
+                        </div>
+                        <div class="card2 card">
+                            <p class="busines">Business</p>
+                            <p class="zer"><sup class="dol">$</sup>19<sub class="month">/month</sub></p>
+                            <p>Aida dere </p>
+                            <p>Nec feugiat nisl</p>
+                            <p>Nulla at volutpat dola</p>
+                            <p class="strike">Pharetra massa</p>
+                            <p class="strike1">Massa ultricies mi</p>
+                            <button class="buy2">Buy Now</button>
+                        </div>
+                        <div class="card3 card">
+                            <p class="busines">Developer</p>
+                            <p class="zer"><sup class="dol">$</sup>0<sub class="month">/month</sub></p>
+                            <p>Aida dere </p>
+                            <p>Nec feugiat nisl</p>
+                            <p>Nulla at volutpat dola</p>
+                            <p class="strike0">Pharetra massa</p>
+                            <p class="strike0">Massa ultricies mi</p>
+                            <button class="buy1">Buy Now</button>
+                        </div>
+                    
+                    </div>
+
+            
     <!-- </main> -->
    
    
