--- a/vezba25/vezba25.html
+++ b/vezba25/vezba25.html
@@ -14,7 +14,16 @@
             <li><a href="#">SERVICES</a></li>
             <li><a href="#">PORTFOLIO</a></li>
             <li><a href="#">TEAM</a></li>
+            <div class="dropdown">
             <li><a href="#">DROPDOWN</a></li>
+            <div class="dropdown-content">
+                <ul class="links3">
+                <li><a href="">link1</a></li>
+                <li><a href="">link2</a></li>
+                <li><a href="">link3</a></li>
+                </ul>
+            </div>
+        </div>
             <li><a href="#">CONTACT</a></li>
         </ul>
     </div>
