--- a/vezba27/vezba27.html
+++ b/vezba27/vezba27.html
@@ -14,15 +14,21 @@
         </ul>
     </div>
     <div class="picture">
-        <h1 class="travel">Travel Beyond</h1>
+        <h1 class="travel">Travel Beyond Limits</h1>
         <p class="start">Start your travel an affordable price with Travelly<br />
         Contact us now bellow.</p>
         <button class="book">Book Now</button>
     </div>
     <div class="city">
+    <div class="text2">
         <h1 class="exp"><u>The Perfect Travelling Experience.</u></h1>
         <p class="cover2">We cover everything from picking the perfect hotel,<br />
         flight and traveling destination.</p>
+    </div>
+        <div class="clouds">
+            <img src="cloud1.png" alt="" class="cloud">
+            <img src="cloud1.png" alt="" class="cloud2">
+            </div>
     </div>
     <div class="sea">
         <h1 class="trav">The Perfect Travell</h1>
@@ -55,10 +61,10 @@
         <form action="" class="cent">
             <p class="same">Name: <input type="text"></p>
             <p class="same">Email: <input type="email"></p>
-            <button class="sub">Submit</button>
+            
         </form>
         </div>
-
+        <button class="sub">Submit</button>
     </div>
     <footer>
         <div class="last">
