--- a/vezba32/vezba32.html
+++ b/vezba32/vezba32.html
@@ -20,7 +20,7 @@
             <li><a href="" class="nav2">Taxi</a></li>
             <li><a href="" class="nav2">Booking</a></li>
             <li><a href="" class="nav2">Contact Us</a></li>
-            <i class="fas fa-search srch"></i>
+            <a></a><i class="fas fa-search srch"></i>
         </ul>
         </div>
     </div>
@@ -41,6 +41,87 @@
                     <button class="btn">Search</button>
                 </form>
             </div>
+            </div>
+        </div>
+    </div>
+    <div class="our">
+        <h1 class="tops">Our <span class="tax">Taxi</span></h1>
+        <div class="boxes">
+        <div class="box1 box">
+            <p class="one">01</p>
+            <h3 class="car">CAR 1</h3>
+            <p>act that a reader will be<br />
+            distracted</p>
+            <img src="taxi.png" alt="" class="taxi2">
+        </div>
+        <div class="box2 box">
+            <p class="one">02</p>
+            <h3 class="car">CAR 2</h3>
+            <p>act that a reader will be<br />
+                distracted</p>
+                <img src="taxi.png" alt="" class="taxi2">
+        </div>
+        <div class="box3 box">
+            <p class="one">03</p>
+            <h3 class="car">CAR 3</h3>
+            <p>act that a reader will be<br />
+                distracted</p>
+                <img src="taxi.png" alt="" class="taxi2">
+        </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="why">
+            <h1 class="ride">Why Ride <span class="with-u">With Uloax</span></h1>
+            <hr />
+        </div>
+        <div class="firstrow">
+            <img src="img1.png" alt="" class="wallet">
+        
+            <div class="test">
+            <h4>Uloax for Every Pocket</h4>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at<br />
+                 it's layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as It is a<br />
+                 long established fact that a reader will be distracted by the readable c</p>
+                 <button class="now">BOOK NOW</button>
+            </div>
+        </div>
+        <div class="secondrow">
+            <div>
+            <h1 class="secure">Secure and Safer Rides</h1>
+            <p class="text2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at<br />
+                it's layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as It is a<br />
+                long established fact that a reader will be distracted by the readable c
+            </p>
+            <button class="now">BOOK NOW</button>
+            </div>
+            <div>
+            <img src="img2png.png" alt="" class="cabt">
+            </div>
+        </div>
+        <div class="thirdrow">
+            <div>
+                <img src="img3.png" alt="" class="cab3">
+            </div>
+            <div>
+                <h1>Uloax for Every Pocket</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at<br />
+                    it's layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as It is a<br />
+                    long established fact that a reader will be distracted by the readable c </p>
+                    <button class="now">BOOK NOW</button>
+            </div>
+        </div>
+        <div class="fourthrow">
+            <div>
+                <h1>Secure and Safer Rides</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at<br />
+                    it's layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as It is a<br />
+                    long established fact that a reader will be distracted by the readable c
+                </p>
+                <button class="now">BOOK NOW</button>
+            </div>
+            <div>
+                <img src="img3.png" alt="" class="cabs">
             </div>
         </div>
     </div>
