--- a/vezba49DOM/vezba49.html
+++ b/vezba49DOM/vezba49.html
@@ -7,13 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id = "hed1" >Naslov</h1>
-    <h1 id = "hed2" onclick="handler()">Naslov</h1>
-    <h1 id = "hed">Naslov</h1>
-    <p id= "text">Jacascript Exercieses</p>
 
-    <button onclick="change()">Change</button>
-    
+    <h1 class="one">Naslov1</h1>
+    <h2 class="two">Naslov 2</h2>
+    <h3>Naslov3</h3>
+    <h1 class="one">Naslov</h1>
+    <h2 class="two">Naslov 2</h2>
+    <h3>Naslov3</h3>
+    <button id = "btn" onclick="change()">Chagneh1</button>
+    <button id = "btn2" onclick="changet()">changeh2</button>
+    <div id= "smthng" style ="width:200px; height : 300px; border : 1px solid black"></div>
+    <button onclick="handler()">Add</button>
     <script src="vezba49DoM.js"></script>
 </body>
 </html>
