--- a/TODO/ind.html
+++ b/TODO/ind.html
@@ -17,9 +17,12 @@
     </form>
 </div>
 <ul id="todo-list">
-
+    <div id = "ins">
+        
+    </div>
 </ul>
 
-<script src="ind.js"></script>
+
+    <script src="ind.js"></script>
 </body>
 </html>
