--- a/GAME/game.html
+++ b/GAME/game.html
@@ -20,12 +20,12 @@
         <div class="reveal"><i class="fas fa-cheese food chesses"></i></div>
         <!--  -->
         <div class="reveal"><i class="fas fa-plane food planes"></i></div>
-        <div class="reveal"><i class="fas fa-car food cars"></i></div>
+        <div class="reveal"><i class="fas fa-car food cars s"></i></div>
         <div class="reveal"><i class="fas fa-book food books"></i></div>
         <div class="reveal"><i class="far fa-taco food tacos"></i></div>
         <!--  -->
         <div class="reveal"><i class="far fa-taco food tacos"></i></div>
-        <div class="reveal"><i class="fas fa-car food cars"></i></div>
+        <div class="reveal"><i class="fas fa-car food cars g"></i></div>
         <div class="reveal"><i class="fas fa-cheese food chesses"></i></div>
         <div class="reveal"><i class="far fa-french-fries food fries"></i></div>
         <!--  -->
